--- a/iridescence_ros_tools/package.xml
+++ b/iridescence_ros_tools/package.xml
@@ -7,13 +7,14 @@
   <!-- One maintainer tag required, multiple allowed, one person per tag -->
   <!-- Example:  -->
   <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
-  <maintainer email="zwhy@todo.todo">zwhy</maintainer>
+  <maintainer email="1354052613@qq.com">Seekerzero</maintainer>
+  <maintainer email="zhuang5@wpi.edu">Zhanhong Huang</maintainer>
 
 
   <!-- One license tag required, multiple allowed, one license per tag -->
   <!-- Commonly used license strings: -->
   <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
-  <license>TODO</license>
+  <license>MIT</license>
 
 
   <!-- Url tags are optional, but multiple are allowed, one per tag -->
