--- a/iridescence_ros_tools/CMakeLists.txt
+++ b/iridescence_ros_tools/CMakeLists.txt
@@ -11,9 +11,10 @@ set(CPACK_PROJECT_NAME ${PROJECT_NAME})
 set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
 set(SOURCE_FILES
     src/utils/ros/TopicGrabber.cpp
+    src/gui/controllers/ROSTopicManagerController.cpp
     src/gui/views/ToolViewer.cpp
-    src/gui/views/ROSTopicManager.cpp
     src/gui/views/MainMenuPanel.cpp
+    src/gui/views/ROSTopicManagerPanel.cpp
     src/viewer/viewer.cpp
 )
 
@@ -35,6 +36,7 @@ find_package(Boost REQUIRED filesystem program_options)
 find_package(Eigen3 REQUIRED)
 find_package(PNG REQUIRED)
 find_package(JPEG REQUIRED)
+find_package(OpenCV REQUIRED)
 
 ## Uncomment this if the package has a setup.py. This macro ensures
 ## modules and global scripts declared therein get installed
@@ -159,6 +161,7 @@ target_include_directories(${PROJECT_NAME} PUBLIC
   ${PNG_INCLUDE_DIRS}
   ${JPEG_INCLUDE_DIRS}
   ${PCL_INCLUDE_DIRS}
+  ${OpenCV_INCLUDE_DIRS}
 )
 target_link_libraries(${PROJECT_NAME}
   # ${Iridescence_LIBRARIES}
@@ -168,6 +171,7 @@ target_link_libraries(${PROJECT_NAME}
   ${PCL_LIBRARIES}
   ${Boost_LIBRARIES}
   ${Eigen3_LIBRARIES}
+  ${OpenCV_LIBS}
 )
 
 
